--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -74,8 +74,8 @@ a:active {
 
 	.menu-toggle {
 		position:absolute;
-		right:0;
-		top:0;
+		right:$horizontalBase/4;
+		top:$lineheight/4;
 		z-index:2;
 	}
 
@@ -98,6 +98,9 @@ a:active {
 
 			a {
 				text-decoration: none;
+				display:block;
+				width:100%;
+				height:100%;
 			}
 
 			&:last-child {
@@ -111,6 +114,9 @@ a:active {
 				transition:all 0.3s;
 				cursor:pointer;
 
+				&:hover {
+					color:white;
+				}
 			}
 
 			&.toggled {
