Postponing support for post format 'aside'. Adding support for post format 'image'.

--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -90,6 +90,20 @@
 		flex-grow:1;
 		text-align:center;
 	}
+
+	.posted-on .entry-date,
+	.byline .author {
+		display:block;
+		float:left;
+		clear:left;
+		width:100%;
+	}
+}
+
+.single.group-blog .entry-footer {
+	.byline .author {
+		display:block;
+	}
 }
 
 .site-main article {
