--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -28,6 +28,12 @@ textarea,
 .comment-content {
 	font-family: $book;
 }
+.entry-summary,
+.entry-content,
+h1, h2, h3, h4, h5, h6 {
+	-ms-word-wrap:break-word;
+	word-wrap:break-word;
+}
 .site-main article {
 	font-size: 19px;
 	font-size: 1.9rem;
@@ -36,8 +42,6 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: $sans;
 	margin-top: $lineheight;
 	clear: both;
-	-ms-word-wrap:break-word;
-	word-wrap:break-word;
 }
 h1 {
 	font-size:3.8rem;
