--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -62,7 +62,7 @@ a:active {
 	top:0;
 	left:-100%;
 	bottom:0;
-	width:500px;
+	width:61.803%;
 	padding:$lineheight 0;
 	overflow:auto;
 	transition:all 0.3s;
@@ -147,6 +147,9 @@ a:active {
 
 			}
 		}
+	}
+	@media screen and (min-width:1000px) {
+		width:38.197%;
 	}
 }
 .admin-bar .main-navigation {
