--- a/scss/_accessibility.scss
+++ b/scss/_accessibility.scss
@@ -14,7 +14,7 @@
 .screen-reader-text:active,
 .screen-reader-text:focus {
 	background-color: #f1f1f1;
-	border-radius: 3px;
+	border-radius: $borderRadius;
 	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
 	clip: auto !important;
 	color: #21759b;
