--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -87,7 +87,7 @@ input[type="search"],
 textarea {
 	color: #666;
 	border: 1px solid #ccc;
-	border-radius: 3px;
+	border-radius: $borderRadius;
 	width:100%;
 	padding:$lineheight/2 $horizontalBase/2;
 }
