Minor comment clarification.

--- a/scss/_featured-images.scss
+++ b/scss/_featured-images.scss
@@ -3,7 +3,7 @@
  * and also the Custom Header Image feature.
  */
 
-// Thumbnails on non-singular templates
+// Post thumbnails on non-singular templates
 .home, .blog, .archive {
 	.site-main article.has-post-thumbnail {
 		.entry-header {
