--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -162,25 +162,20 @@ a:active {
 .site-main .comment-navigation,
 .site-main .paging-navigation,
 .site-main .post-navigation {
+	@extend %clearfix;
+
 	margin: 0 0 $lineheight;
-}
-.site-main .comment-navigation {
-	overflow: hidden;
-}
-.site-main .post-navigation,
-.site-main .paging-navigation {
-	@extend .clear;
 }
 
 #page {
-	.comment-navigation .nav-previous,
-	.paging-navigation .nav-previous,
-	.post-navigation .nav-previous {
-		@extend .alignleft;
-	}
-	.comment-navigation .nav-next,
-	.paging-navigation .nav-next,
-	.post-navigation .nav-next {
-		@extend .alignright;
+	.comment-navigation,
+	.paging-navigation,
+	.post-navigation {
+		.nav-previous {
+			@extend .alignleft;
+		}
+		.nav-next {
+			@extend .alignright;
+		}
 	}
 }
